appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
  labels:
    app: vproapp
spec:
  replicas: 1 # Maintains exactly 3 running copies of your application
  selector:
    matchLabels:
      app: vproapp # Must match the template labels below
  template:
    metadata:
      labels:
        app: vproapp # Label given to the Pods generated by this deployment
    spec:
      containers:
        - name: vproapp
          image: vprocontainers/vprofileapp # Container image to download and run
          imagePullPolicy: Always
          ports:
          - name: vproapp-port
            containerPort: 8080 # The port your container application listens on
