mcdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpromc
  labels:
    app: vpromc
spec:
  replicas: 1 # Maintains exactly 3 running copies of your application
  selector:
    matchLabels:
      app: vpromc # Must match the template labels below
  template:
    metadata:
      labels:
        app: vpromc # Label given to the Pods generated by this deployment
    spec:
      containers:
        - name: vpromc
          image: memcached # Container image to download and run
          ports:
          - name: vpromc-port
            containerPort: 11211 # The port your container application listens on
