appservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproapp-service
spec:
  ports:
    - protocol: TCP
      port: 8080 # The port that other pods inside the cluster will connect to
      targetPort: 8080 # The port your actual application/container is listening on
  selector:
    app: vproapp # Must match the label on your Deployment/Pod template
  type: ClusterIP
