mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
spec:
  ports:
    - protocol: TCP
      port: 11211 # The port that other pods inside the cluster will connect to
      targetPort: vpromc-port # The port your actual application/container is listening on
  selector:
    app: vpromc # Must match the label on your Deployment/Pod template
  type: ClusterIP
