rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpromq01
spec:
  ports:
    - protocol: TCP
      port: 5672 # The port that other pods inside the cluster will connect to
      targetPort: vprormq-port # The port your actual application/container is listening on
  selector:
    app: vprormq # Must match the label on your Deployment/Pod template
  type: ClusterIP
